--- a/raon-control/test/main-legacy.html
+++ b/raon-control/test/main-legacy.html
@@ -223,27 +223,27 @@
         <div class="body-center" style="width:720px; height:780px;">
             <div class="status-box">RUNNING</div>
             <div style="margin:auto; position: relative; width:500px; height:500px;">
-                <div class="image-box"><img id="img1" src="images/img1.svg"
+                <div class="image-box"><img id="img1" src="../images/img1.svg"
                         style="position: relative; width:500; height:500;"></img></div>
-                <div class="image-box"><img id="img2" src="images/img2.svg"
+                <div class="image-box"><img id="img2" src="../images/img2.svg"
                         style="position: relative; width:500; height:500;"></img></div>
-                <div class="image-box"><img id="img3" src="images/img3.svg"
+                <div class="image-box"><img id="img3" src="../images/img3.svg"
                         style="position: relative; width:500; height:500;"></img></div>
-                <div class="image-box"><img id="img4" src="images/img4.svg"
+                <div class="image-box"><img id="img4" src="../images/img4.svg"
                         style="position: relative; width:500; height:500;"></img></div>
-                <div class="image-box"><img id="img5" src="images/img5.svg"
+                <div class="image-box"><img id="img5" src="../images/img5.svg"
                         style="position: relative; width:500; height:500;"></img></div>
-                <div class="image-box"><img id="img6" src="images/img6.svg"
+                <div class="image-box"><img id="img6" src="../images/img6.svg"
                         style="position: relative; width:500; height:500;"></img></div>
-                <div class="image-box"><img id="img7" src="images/img7.svg"
+                <div class="image-box"><img id="img7" src="../images/img7.svg"
                         style="position: relative; width:500; height:500;"></img></div>
-                <div class="image-box"><img id="img8" src="images/img8.svg"
+                <div class="image-box"><img id="img8" src="../images/img8.svg"
                         style="position: relative; width:500; height:500;"></img></div>
-                <div class="image-box"><img id="img9" src="images/img9.svg"
+                <div class="image-box"><img id="img9" src="../images/img9.svg"
                         style="position: relative; width:500; height:500;"></img></div>
-                <div class="image-box"><img id="img10" src="images/img10.svg"
+                <div class="image-box"><img id="img10" src="../images/img10.svg"
                         style="position: relative; width:500; height:500;"></img></div>
-                <div class="image-box"><img id="img11" src="images/img11.svg"
+                <div class="image-box"><img id="img11" src="../images/img11.svg"
                         style="position: relative; width:500; height:500;"></img></div>
             </div>
         </div>
