--- a/raon-control/bab.html
+++ b/raon-control/bab.html
@@ -322,7 +322,7 @@
         <svg id="circle2" width="800" height="800">
           <defs>
             <style>
-              .cls-1 {
+              .cls-2 {
                 fill: none;
                 stroke: #0f495a;
                 stroke-miterlimit: 10;
@@ -330,10 +330,10 @@
               }
             </style>
           </defs>
-          <path class="cls-1 circle2-d" d="M372.64,324.82a80.06,80.06,0,0,1,54.72,0" />
-          <path class="cls-1 circle2-d" d="M324.82,427.36a80.06,80.06,0,0,1,0-54.72" />
-          <path class="cls-1 circle2-d" d="M427.36,475.18a80.06,80.06,0,0,1-54.72,0" />
-          <path class="cls-1 circle2-d" d="M475.18,372.64a80.06,80.06,0,0,1,0,54.72" />
+          <path class="cls-2 circle2-d" d="M372.64,324.82a80.06,80.06,0,0,1,54.72,0" />
+          <path class="cls-2 circle2-d" d="M324.82,427.36a80.06,80.06,0,0,1,0-54.72" />
+          <path class="cls-2 circle2-d" d="M427.36,475.18a80.06,80.06,0,0,1-54.72,0" />
+          <path class="cls-2 circle2-d" d="M475.18,372.64a80.06,80.06,0,0,1,0,54.72" />
         </svg>
       </div>
 
@@ -348,69 +348,7 @@
       <div class="container"><img id="circle8-3" src="images/bab/circle8-3.svg"></div>
 
       <div class="container"><img id="wheel" src="images/bab/wheel.svg"></div>
-      <!-- <div class="container"><img id="menu" src="images/bab/menu.svg"></div> -->
-      <div class="container">
-        <svg id="menu" width="800" height="800">
-          <defs>
-            <style>
-              .cls-2 {
-                font-size: 18px;
-                fill: #f1f2f2;
-              }
-            </style>
-          </defs>
-          <text class="cls-2" transform="matrix(0.1, 1, -1, 0.1, 601.09, 367.57)">국</text>
-          <text class="cls-2" transform="translate(602.7 383.61) rotate(88.12)">수</text>
-          <text class="cls-2" transform="translate(603.25 399.73) rotate(91.94)">나</text>
-          <text class="cls-2" transform="matrix(-0.1, 0.99, -0.99, -0.1, 602.72, 415.85)">무</text>
-          <text class="cls-2" transform="translate(557.93 271.38) rotate(54.29)">서</text>
-          <text class="cls-2" transform="matrix(0.53, 0.85, -0.85, 0.53, 567.35, 284.45)">브</text>
-          <text class="cls-2" transform="translate(575.89 298.15) rotate(61.94)">웨</text>
-          <text class="cls-2" transform="matrix(0.41, 0.91, -0.91, 0.41, 583.48, 312.37)">이</text>
-          <text class="cls-2" transform="translate(479.85 212.82) rotate(26.2)">설</text>
-          <text class="cls-2" transform="translate(494.35 219.94) rotate(30.03)">어</text>
-          <text class="cls-2" transform="matrix(0.83, 0.56, -0.56, 0.83, 508.31, 228)">정</text>
-          <text class="cls-2" transform="matrix(1, -0.1, 0.1, 1, 367.57, 198.91)">맥</text>
-          <text class="cls-2" transform="translate(383.61 197.3) rotate(-1.88)">도</text>
-          <text class="cls-2" transform="translate(399.73 196.75) rotate(1.94)">날</text>
-          <text class="cls-2" transform="matrix(0.99, 0.1, -0.1, 0.99, 415.85, 197.28)">드</text>
-          <text class="cls-2" transform="translate(271.38 242.07) rotate(-35.71)">롯</text>
-          <text class="cls-2" transform="matrix(0.85, -0.53, 0.53, 0.85, 284.45, 232.65)">데</text>
-          <text class="cls-2" transform="translate(298.15 224.11) rotate(-28.06)">리</text>
-          <text class="cls-2" transform="matrix(0.91, -0.41, 0.41, 0.91, 312.37, 216.52)">아</text>
-          <text class="cls-2" transform="translate(212.82 320.15) rotate(-63.8)">만</text>
-          <text class="cls-2" transform="translate(219.94 305.66) rotate(-59.97)">석</text>
-          <text class="cls-2" transform="matrix(0.56, -0.83, 0.83, 0.56, 228, 291.69)">장</text>
-          <text class="cls-2" transform="translate(203.34 456.21) rotate(-101.44)">냄</text>
-          <text class="cls-2" transform="translate(200.13 440.41) rotate(-97.62)">비</text>
-          <text class="cls-2" transform="matrix(-0.07, -1, 1, -0.07, 197.97, 424.43)">요</text>
-          <text class="cls-2" transform="translate(196.89 408.33) rotate(-89.97)">리</text>
-          <text class="cls-2" transform="translate(196.88 392.2) rotate(-86.15)">연</text>
-          <text class="cls-2" transform="translate(197.96 376.1) rotate(-82.34)">구</text>
-          <text class="cls-2" transform="translate(200.09 360.1) rotate(-78.55)">소</text>
-          <text class="cls-2" transform="translate(242.07 528.62) rotate(-125.71)">역</text>
-          <text class="cls-2" transform="matrix(-0.53, -0.85, 0.85, -0.53, 232.65, 515.54)">전</text>
-          <text class="cls-2" transform="translate(224.11 501.85) rotate(-118.06)">우</text>
-          <text class="cls-2" transform="matrix(-0.41, -0.91, 0.91, -0.41, 216.52, 487.63)">동</text>
-          <text class="cls-2" transform="translate(312.84 583.74) rotate(-151.88)">진</text>
-          <text class="cls-2" transform="translate(298.61 576.15) rotate(-148.06)">본</text>
-          <text class="cls-2" transform="translate(448.33 598.4) rotate(170.47)">홍</text>
-          <text class="cls-2" transform="matrix(-1, 0.1, -0.1, -1, 432.42, 601.09)">기</text>
-          <text class="cls-2" transform="translate(416.39 602.7) rotate(178.12)">와</text>
-          <text class="cls-2" transform="translate(400.26 603.25) rotate(-178.06)">쭈</text>
-          <text class="cls-2" transform="matrix(-0.99, -0.1, 0.1, -0.99, 384.15, 602.72)">꾸</text>
-          <text class="cls-2" transform="translate(368.09 601.11) rotate(-170.44)">미</text>
-          <text class="cls-2" transform="matrix(-0.83, 0.56, -0.56, -0.83, 522.17, 562.74)">우</text>
-          <text class="cls-2" transform="matrix(-0.87, 0.5, -0.5, -0.87, 508.77, 571.74)">쿠</text>
-          <text class="cls-2" transform="translate(494.8 579.8) rotate(153.85)">야</text>
-          <text class="cls-2" transform="translate(595.99 457.34) rotate(110.47)">스</text>
-          <text class="cls-2" transform="translate(590.36 472.46) rotate(114.29)">바</text>
-          <text class="cls-2" transform="translate(583.74 487.16) rotate(118.12)">라</text>
-          <text class="cls-2" transform="translate(576.15 501.39) rotate(121.94)">시</text>
-          <text class="cls-2" transform="matrix(-0.58, 0.81, -0.81, -0.58, 567.63, 515.09)">라</text>
-          <text class="cls-2" transform="matrix(-0.64, 0.77, -0.77, -0.64, 558.21, 528.19)">멘</text>
-        </svg>
-      </div>
+      <div class="container" id="menu"></div>
       <div class="container"><img id="selection" src="images/bab/selection.svg"></div>
 
     </div>
@@ -486,7 +424,6 @@
       }
     }
   }
-
 
   var circle2Small = [
     "M386.32,362.41a40,40,0,0,1,27.36,0",
@@ -578,6 +515,113 @@
     menuID.classList.add('roulette');
   });
 
+  var menuTranslateArray = {
+    1: ["translate(391.67 196.89) rotate(0.03)"],
+    2: [
+      "translate(383.61 197.3) rotate(-1.88)",
+      "translate(399.73 196.75) rotate(1.94)"
+    ],
+    3: [
+      "translate(375.57 197.97) rotate(-3.8)",
+      "translate(391.67 196.89) rotate(0.03)",
+      "translate(407.8 196.88) rotate(3.85)"
+    ],
+    4: [
+      "matrix(1, -0.1, 0.1, 1, 367.57, 198.91)",
+      "translate(383.61 197.3) rotate(-1.88)",
+      "translate(399.73 196.75) rotate(1.94)",
+      "matrix(0.99, 0.1, -0.1, 0.99, 415.85, 197.28)"
+    ],
+    5: [
+      "translate(359.59 200.13) rotate(-7.62)",
+      "translate(375.57 197.97) rotate(-3.8)",
+      "translate(391.67 196.89) rotate(0.03)",
+      "translate(407.8 196.88) rotate(3.85)",
+      "translate(423.9 197.95) rotate(7.66)"
+    ],
+    6: [
+      "translate(351.66 201.6) rotate(-9.53)",
+      "matrix(1, -0.1, 0.1, 1, 367.57, 198.91)",
+      "translate(383.61 197.3) rotate(-1.88)",
+      "translate(399.73 196.75) rotate(1.94)",
+      "matrix(0.99, 0.1, -0.1, 0.99, 415.85, 197.28)",
+      "translate(431.91 198.89) rotate(9.56)"
+    ],
+    7: [
+      "translate(343.78 203.34) rotate(-11.44)",
+      "translate(359.59 200.13) rotate(-7.62)",
+      "translate(375.57 197.97) rotate(-3.8)",
+      "translate(391.67 196.89) rotate(0.03)",
+      "translate(407.8 196.88) rotate(3.85)",
+      "translate(423.9 197.95) rotate(7.66)",
+      "translate(439.9 200.09) rotate(11.45)"
+    ]
+  };
+
+
+  var babMenuArray = ['맥도날드', '설어정', '서브웨이', '국수나무', '스바라시라멘', '우쿠야', '홍기와쭈꾸미', '진본', '역전우동', '냄비요리연구소', '만석장', '롯데리아'];
+
+  function createBabList(babListJSON) {
+
+    var random = [];
+    var gachaMenu = [];
+
+    for (let i = 0; i < 12; i++) {
+      var gachaValue = 1;
+
+      while (1) {
+        gachaValue = Math.floor(Math.random() * babListJSON.length);
+
+        if (random.indexOf(gachaValue) == -1) {
+          break;
+        }
+      }
+
+      random[i] = gachaValue;
+    }
+
+    var count = 0;
+    for (let i = 0; i < random.length; i++) {
+       var percentage = Math.floor(10 / babListJSON[random[i]].tier);
+
+      for (let k = 0; k < percentage; k++) {
+        gachaMenu[count] = babListJSON[random[i]].menu;
+        count += 1;
+      }
+    }
+
+    for(let i = 0; i < babMenuArray.length; i++) {
+      newManuNumber = Math.floor(Math.random() * gachaMenu.length);
+      babMenuArray[i] = gachaMenu[newManuNumber];
+    }
+
+    for (let i = 0; i < babMenuArray.length; i++) {
+      var id = 'menu' + i;
+      var rotationDegree = 30 * i;
+
+      var menuSVG = document.createElementNS('http://www.w3.org/2000/svg', 'svg');
+      menuSVG.setAttribute('id', id);
+      menuSVG.setAttribute('width', '800');
+      menuSVG.setAttribute('height', '800');
+      menuSVG.style.position = 'absolute';
+      menuSVG.style.transform = 'rotate(' + rotationDegree + 'deg)';
+
+      var charLength = babMenuArray[i].length;
+      for (let k = 0; k < charLength; k++) {
+        var text = document.createElementNS("http://www.w3.org/2000/svg", "text");
+        text.setAttribute('class', 'cls-1');
+        text.setAttribute('transform', menuTranslateArray[charLength][k]);
+        text.textContent = babMenuArray[i][k];
+
+        menuSVG.appendChild(text);
+      }
+
+      var menuContainerID = document.getElementById('menu');
+      menuContainerID.appendChild(menuSVG);
+    }
+  }
+
+
   function timer() {
     var d = new Date();
     document.getElementById('time-stamp').innerHTML = d.toLocaleTimeString('en-GB');
@@ -593,12 +637,13 @@
 
   }
 
+
   function getBabDatabase() {
     var xhttp = new XMLHttpRequest();
     xhttp.onreadystatechange = function () {
       if (this.readyState == 4 && this.status == 200) {
-        babList = JSON.parse(this.responseText);
-        console.log(babList);
+        babListJSON = JSON.parse(this.responseText);
+        createBabList(babListJSON);
       }
     };
 
