change title margin

--- a/raon-control/monitoring.html
+++ b/raon-control/monitoring.html
@@ -58,7 +58,9 @@
 
                     <div class="grid-item grid-1x1">
                         <p class="title">Storage</p>
-                        <div class="doughnutChartText">80%</div>
+                        <div class="doughnutChartText">24TB</div>
+                        <div class="doughnutChartTextUnder">100TB</div>
+
                         <div class="doughnut-contain">
                             <svg width="176" height="176" style="fill:none">
                                 <circle class="doughnutBackground" cx="80" cy="80" r="80" />
@@ -70,7 +72,8 @@
 
                     <div class="grid-item grid-1x1">
                         <p class="title">Archive</p>
-                        <div class="doughnutChartText">293948</div>
+                        <div class="doughnutChartText">192840</div>
+                        <div class="doughnutChartTextUnder">300000</div>
                         <div class="doughnut-contain">
                             <svg width="174" height="174" style="fill:none">
                                 <circle class="doughnutBackground" cx="80" cy="80" r="80" />
@@ -162,7 +165,6 @@
             </div>
         </div>
         <button class="slide-button" onclick="showDivs(1)">&#10095;</button>
-
     </div>
 
 
